<resources>
    <string name="app_name">Library</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Library</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="settings">Settings</string>
    <string name="searchingText">Поиск</string>
    <string name="book_name">Название книги</string>
    <string name="book">книга</string>
    <string name="book_description">Описание книги</string>
    <string name="my_proposal">Активные заявки</string>
    <string name="proposal_history">История заявок</string>
    <string name="create_proposal">Создать заявку</string>
    <string name="current_proposal">Текущие заявки:</string>
    <string name="title_activity_menu_library">MenuLibrary</string>
    <string name="process_button">Обработать</string>


    <string-array name="proposal_list_item">
        <item>Создать заявку</item>
        <item>Активные заявки</item>
        <!--item>История</item-->
    </string-array>

    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello">Книги</string>
    <string name="my_profile">Мой профиль</string>
    <string name="Profile">Профиль</string>
    <string name="firstName">Имя</string>
    <string name="secondName">Отчество</string>
    <string name="surName">Фамилия</string>
    <string name="birthday">День рождения</string>
    <string name="dormitories">Общежитие</string>
    <string name="room">Комната</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="phone">Телефон</string>
    <string name="save">Сохранить</string>
    <string name="Edit">Редактирование</string>
    <string name="link_user_profile"><u>Профиль пользователя</u></string>
    <string name="link_user_proposal_history"><u>Посмотреть историю заявок</u></string>
    <string name="user_books_list">Список книг на руках у пользователя</string>
    <string name="save_process">Сохранение...</string>
    <string name="confirm_return">Оформить возврат книги</string>
    <string name="add_book">Оформить заявку</string>
    <string name="cancel_proposal">Отменить заявку</string>
    <string name="disband_button">Расформировать</string>
    <string name="approve_return">Подтвердить возврат</string>
    <string name="consider_button">Рассмотреть</string>
    <string name="approve_button">Подтвердить</string>
    <string name="reject_button">Отклонить</string>
    <string name="add_new_book">Добавить книгу</string>
    <string name="author_book">Автор книги</string>
    <string name="genre_book">Жанр</string>
    <string name="theme_book">Область знаний</string>
    <string name="amount_page_book">Количество страниц</string>
    <string name="publishment_book">Издательство</string>
    <string name="publish_year_book">Год издания</string>
    <string name="bookplace">Местоположение книги</string>




</resources>
